--- a/src/App.scss
+++ b/src/App.scss
@@ -54,3 +54,8 @@ $bg-color: #282c34;
   width: 200px;
   font-size: calc(10px + 2vmin);
 }
+.fetch-button {
+  margin-top: 10px;
+  height: 20px;
+  width: 100px;
+}
